Fix leaked python reference in python-defined subclasses

https://bugzilla.gnome.org/show_bug.cgi?id=640184